samples/_failures_safe/1761076872_b35014_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b829589a.c: In function ‘main’:
./samples/SAFE/__tmp_b829589a.c:157:35: error: expected ‘)’ at end of input
  157 |     int start_index = (entry_count
      |                       ~           ^
      |                                   )
./samples/SAFE/__tmp_b829589a.c:157:5: error: expected declaration or statement at end of input
  157 |     int start_index = (entry_count
      |     ^~~
